# School_Manager

./: CMakeLists.txt  main.c
Include/: classroom.h  datatype.h  function.h  student.h  teacher.h
Src/: classroom.c  function.c  student.c  teacher.c
